--- a/posts/quick-start.mdx
+++ b/posts/quick-start.mdx
@@ -35,13 +35,13 @@ The app receives login responses on a redirect URI that uses a private-use URI s
 The Android App is a Single Activity App that uses Kotlin and Jetpack Compose. The [Android AppAuth Library](https://github.com/openid/AppAuth-Android) implements OpenID Connect and the app receives login responses on HTTPS redirect URIs, registered as Android app links.
 
 <div className="smallimage">
-![Android view](/images/3/android-view.jpg)
+![Android view](/images/3/android-view.jpg?v=20240912)
 </div>
 
 Logins run on a *Chrome Custom Tab*, with modern security and good usability. To run the app from Android Studio you can follow the <Link href='/posts/basicandroidapp-execution'>Android Code Sample Instructions</Link>.
 
 <div className="smallimage">
-![Android login](/images/3/android-login.jpg)
+![Android login](/images/3/android-login.jpg?v=20240912)
 </div>
 
 ### Secured iOS App
