--- a/posts/android-coding-key-points.mdx
+++ b/posts/android-coding-key-points.mdx
@@ -302,7 +302,7 @@ interface Authenticator {
 Our app has two views that load concurrently and fire three concurrent API requests. The main view data is retrieved and there are also two additional API requests to get user info. OAuth user info is retrieved from the authorization server and additional user attributes are retrieved from the API.
 
 <div className="smallimage">
-![concurrent views](/images/530/concurrent-views.jpg)
+![concurrent views](/images/530/concurrent-views.jpg?v=20240912)
 </div>
 
 A *ViewModelCoordinator* object is used to wait for all views to load. In the event of any view receiving a permanent 401 response from the API, a single OAuth redirect is triggered by the main activity:
@@ -364,7 +364,7 @@ override fun startLogin(launchAction: (i: Intent) -> Unit) {
 }
 ```
 
-At runtime the properties of AppAuth objects are set based on our OAuth configuration settings:
+At runtime the properties of AppAuth objects are set based on our OAuth configuration settings. AppAuth libraries then produce outgoing authorization code flow (PKCE) request messages and then handle incoming response messages.
 
 ```json
 {
@@ -383,16 +383,6 @@ At runtime the properties of AppAuth objects are set based on our OAuth configur
   }
 }
 ```
-
-AppAuth libraries produce outgoing authorization code flow (PKCE) request messages and then handle incoming response messages:
-
-![appauth messages](/images/530/appauth-messages.jpg)
-
-The libraries also select the type of login window, and the default option is to use a Chrome custom tab:
-
-<div className="smallimage">
-![custom tab](/images/530/custom-tab.jpg)
-</div>
 
 ### AppAuth Library – Login Responses
 
@@ -415,13 +405,7 @@ Our manifest file tells AppAuth’s login activity to use a claimed HTTPS scheme
 </activity>
 ```
 
-Upon return from login we present the below *Web Hosted Post Login Page* in the Chrome custom tab window. This screen receives the authorization code in a response query parameter.
-
-<div className="smallimage">
-![login completion](/images/530/login-completion.jpg)
-</div>
-
-JavaScript code in the web page invokes the login receiver activity when the continue button is pressed. This forwards any received query parameters, including the authorization code, to the app:
+Upon return from login an interstitial page runs in the Chrome custom tab window. This screen receives the authorization code in a response query parameter. JavaScript code in the web page invokes the login receiver activity when the continue button is pressed. This forwards any received query parameters, including the authorization code, to the app:
 
 ```javascript
 <script>
@@ -444,13 +428,7 @@ JavaScript code in the web page invokes the login receiver activity when the con
 
 ### AppAuth Library – Cancelled Logins
 
-It is possible for users to cancel logins if they are having trouble logging in, via the top left button:
-
-<div className="smallimage">
-![cancelled logins](/images/530/cancelled-logins.jpg)
-</div>
-
-AppAuth libraries are well designed and provide error codes that we can use to determine cancellation and other conditions:
+It is possible for users to cancel logins if they are having trouble logging in. AppAuth libraries are well designed and provide error codes that we can use to determine cancellation and other conditions:
 
 ```kotlin
 override suspend fun finishLogin(intent: Intent) {
@@ -480,12 +458,6 @@ override suspend fun finishLogin(intent: Intent) {
     }
 }
 ```
-
-For cancelled logins we return the user to the *Login Required View* so that they can retry the operation:
-
-<div className="smallimage">
-![login required](/images/530/login-required.jpg)
-</div>
 
 ### AppAuth Library – Authorization Code Grant
 
@@ -533,7 +505,7 @@ After login, the app stores OAuth tokens using a *TokenStorage* object, which sa
 
 ### Application Restarts without Login
 
-When the app starts, it loads OpenID Connect metadata and also any tokens that have been saved to Android storage. This prevents the user needing to re-authenticate on every application restart:
+When the app starts, it loads OpenID Connect metadata and also any tokens that have been saved to Android storage. This prevents the user needing to re-authenticate on every application restart.
 
 ### AppAuth Library – Refreshing Access Tokens
 
@@ -602,13 +574,11 @@ private suspend fun performRefreshTokenGrant() {
 
 ### Token Renewal and Concurrency
 
-When multiple views call APIs and receive 401 responses, the token renewal call should be *synchronized* so that it only occurs once. If we view HTTP traffic we can see the correct behaviour:
+When multiple views call APIs and receive 401 responses, the token renewal call should be *synchronized* so that it only occurs once:
 
 - Multiple views call the API and receive a 401 response
 - A single token renewal message is sent to the authorization server
 - Multiple views successfully call the API again with the new access token
-
-![synchronized refresh](/images/530/synchronized-refresh.jpg)
 
 To ensure this, our code uses a *ConcurrentActionHandler* class, so that only a single UI view does a token refresh at a time:
 
@@ -670,13 +640,7 @@ override fun startLogout(launchAction: (i: Intent) -> Unit) {
 }
 ```
 
-Logout request messages include a *Post Logout Redirect URI* that points to our *Web Hosted Post-Logout Page*:
-
-<div className="smallimage">
-![logout completion](/images/530/logout-completion.jpg)
-</div>
-
-When continue is clicked, the web page again invokes the app’s claimed HTTPS scheme, which matches the below logout receiver activity, so that control is returned to the app and logout can complete:
+Logout request messages include a *Post Logout Redirect URI* that points to our *Web Hosted Post-Logout Page*. The user clicks a *Continue* button and the web page again invokes the app’s claimed HTTPS scheme, which matches the below logout receiver activity, so that control is returned to the app and logout can complete:
 
 ```xml
 <activity
@@ -732,7 +696,7 @@ public static final class TokenRequestErrors {
 The app’s error handling is diligent about capturing these runtime details, to help with OAuth problem resolution:
 
 <div className="smallimage">
-![appauth error](/images/530/appauth-error.jpg)
+![appauth error](/images/530/appauth-error.jpg?v=20240912)
 </div>
 
 By coding in Kotlin, our Android sample requires fewest technical layers to integrate AppAuth libraries, and we have first-class access to error details.
@@ -774,9 +738,9 @@ private fun isForbiddenError(error: UIError): Boolean {
 
 ### Debugging Kotlin Code
 
-The app can be debugged via the below toolbar icon, to step through code using commands from the *Run Menu*. This also enables us to view the state of AppAuth objects, when we need to troubleshoot OAuth code:
+You can use the standard Android Studio debug option to step through code using commands from the *Run Menu*. This also enables us to view the state of AppAuth objects, when we need to troubleshoot OAuth code:
 
-![debug](/images/530/debug.jpg)
+![debug](/images/530/debug.jpg?v=20240912)
 
 ### Code Quality Checks
 
@@ -788,7 +752,7 @@ We use the [detekt static analyzer tool](https://detekt.github.io/detekt), to ch
 
 This produces warnings that help to keep the code base maintainable:
 
-![code quality warnings](/images/530/code-quality-warnings.jpg)
+![code quality warnings](/images/530/code-quality-warnings.jpg?v=20240912)
 
 ### AppAuth Libraries
 
