--- a/posts/api-platform-design.mdx
+++ b/posts/api-platform-design.mdx
@@ -21,7 +21,7 @@ The API flows in this blog serve web and mobile clients and consist of the follo
 | -------------- | ------------- |
 | <span style={{color:'green'}}>**Single Page Application**</span> | Clients that follow browser best practices and use cookies to transport access tokens to APIs. |
 | <span style={{color:'green'}}>**Native Application**</span> | Desktop and mobile clients that follow native best practices and call APIs with access tokens. |
-| <span style={{color:'green'}}>**API**</span> | APIs receive secure values in in JWT access tokens and use them for business authorizion. |
+| <span style={{color:'green'}}>**API**</span> | APIs receive secure values in JWT access tokens and use them for business authorizion. |
 | <span style={{color:'green'}}>**API Gateway**</span> | The API gateway handles client-specific security differences, to handle concerns like cookies, CORS and CSRF for web clients. |
 | <span style={{color:'green'}}>**Authorization Server**</span> | The main security component that issues access tokens and implements user authentication. |
 | <span style={{color:'green'}}>**Log Aggregation System**</span> | Captures API logs and enables people to make sense of API activity under load. |
